--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,6 +62,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.license=cddl-netbeans-sun
+project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
